[package]
name = "bynger"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.46"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["wasmbind"] }
wasm-bindgen-futures = "0.4.29"
futures = "0.3.21"
itertools = "0.10.2"
reqwasm = "0.5.0"
weblog = "0.3.0"
gloo = "0.6.1"

