[package]
name = "bynger"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent","NodeList"] }
wasm-bindgen = "^0.2"
chrono = { version = "^0.4.20", features = ["wasmbind", "serde"] }
wasm-bindgen-futures = "^0.4.29"
futures = "^0.3.21"
itertools = "^0.10.2"
reqwasm = "0.5.0"
weblog = "0.3.0"
gloo = "0.8.0"
gloo-utils = "^0.1.3"
js-sys = "0.3.46"

[profile.release]
lto = true
opt-level = 'z'